Add Projeto de Certificação 1
Add Projeto de Certificação 1

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
     <footer>
         <p>Curso DEVstart - Desenvolvedor Front-end - React | Trilha 1: Lógica de Programação | Fase 8: Projetos
-            avançados | Projeto 1: Pontuação dos atletas</p>
+            avançados | Projeto de Certificação 1: Pontuação dos Atletas</p>
     </footer>
 
     <script type="text/javascript" src="notas-atletas.js"></script>
